# Image-processor

./: .gitignore  CITATION.cff  CMakeLists.txt  LICENSE  readme.md
cmake/: conf_py3test.cmake  test.cmake
src/: main.cpp
src/app/: app.cpp  app.h
src/clparser/: clparser.cpp  clparser.h
src/error_message/: error_message.cpp  error_message.h
src/filter_pipeline/: filter_pipeline.cpp  filter_pipeline.h
src/filters/: CMakeLists.txt  base_filter.cpp  base_filter.h  filter_maker.h  filters.h
src/filters/crop_filter/: crop_filter.cpp  crop_filter.h  crop_filter_creator.cpp
src/filters/gaussian_blur_filter/: gaussian_blur_filter.cpp  gaussian_blur_filter.h  gaussian_blur_filter_creator.cpp
src/filters/glass_distortion_filter/: glass_distortion_filter.cpp  glass_distortion_filter.h  glass_distortion_filter_creator.cpp
src/filters/gray_scale_filter/: gray_scale_filter.cpp  gray_scale_filter.h  gray_scale_filter_creator.cpp
src/filters/matrix_appling_filters/: matrix_appling_filter.cpp  matrix_appling_filter.h
src/filters/matrix_appling_filters/edge_detection_filter/: edge_detection_filter.cpp  edge_detection_filter.h  edge_detection_filter_creator.cpp
src/filters/matrix_appling_filters/sharp_filter/: sharp_filter.cpp  sharp_filter.h  sharp_filter_creator.cpp
src/filters/negative_filter/: negative_filter.cpp  negative_filter.h  negative_filter_creator.cpp
src/filters_creator_factory/: filters_creator_factory.cpp  filters_creator_factory.h
src/image/: image.cpp  image.h
src/utils/: utils.cpp  utils.h
tests/: .clang-tidy  CMakeLists.txt  test_blur_filter.cpp  test_crop_filter.cpp  test_edge_detection_filter.cpp  test_filter_makers.cpp  test_glass_distortion_filter.cpp  test_grayscale_filter.cpp  test_image.cpp  test_image_processor.py  test_negative_filter.cpp  test_parser.cpp  test_sharp_filter.cpp
